--- a/pyrodigal/impl/meson.build
+++ b/pyrodigal/impl/meson.build
@@ -3,7 +3,7 @@ impl = []
 impl += static_library(
     'impl_generic',
     'generic.c',
-    include_directories : prodigal_inc,
+    include_directories : inc,
     extra_files : ['generic.h', 'generic.pxd'],
 )
 
@@ -11,7 +11,7 @@ if mmx_supported
     impl += static_library(
         'impl_mmx', 
         'mmx.c', 
-        include_directories : prodigal_inc, 
+        include_directories : inc, 
         c_args : mmx_flags,
         extra_files : ['mmx.h', 'mmx.pxd'],
     )
@@ -21,7 +21,7 @@ if sse2_supported
     impl += static_library(
         'impl_sse2', 
         'sse.c', 
-        include_directories : prodigal_inc, 
+        include_directories : inc, 
         c_args : sse2_flags,
         extra_files : ['sse.h', 'sse.pxd'],
     )
@@ -31,7 +31,7 @@ if avx2_supported
     impl += static_library(
         'impl_avx', 
         'avx.c', 
-        include_directories : prodigal_inc, 
+        include_directories : inc, 
         c_args : avx2_flags,
         extra_files : ['avx.h', 'avx.pxd'],
     )
@@ -41,7 +41,7 @@ if avx512_supported
     impl += static_library(
         'impl_avx512', 
         'avx512.c', 
-        include_directories : prodigal_inc, 
+        include_directories : inc, 
         c_args : avx512_flags,
         extra_files : ['avx512.h', 'avx512.pxd'],
     )
@@ -51,7 +51,7 @@ if neon_supported
     impl += static_library(
         'impl_neon', 
         'neon.c', 
-        include_directories : prodigal_inc, 
+        include_directories : inc, 
         c_args : neon_flags,
         extra_files : ['neon.h', 'neon.pxd'],
     )
