--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,16 +60,14 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Update pip
-      run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Install test requirements
-      run: python -m pip install -r pyrodigal/tests/requirements.txt
+      run: python -m pip install -r src/pyrodigal/tests/requirements.txt
     - name: Build C extension in debug mode
-      run: python setup.py build_ext --inplace --debug
+      run: python -m pip install -e . --no-build-isolation -v
     - name: Test without coverage
-      run: python -m unittest discover -vv
+      run: python -m unittest pyrodigal.tests -vv
 
   test_osx:
     name: Test (OSX)
@@ -123,16 +121,14 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Update pip
-      run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Install test requirements
-      run: python -m pip install -r pyrodigal/tests/requirements.txt
+      run: python -m pip install -r src/pyrodigal/tests/requirements.txt
     - name: Build C extension in debug mode
-      run: python setup.py build_ext --inplace --debug --plat-name macos-x86_64
+      run: python -m pip install -e . --no-build-isolation -v
     - name: Test without coverage
-      run: python -m unittest discover -vv
+      run: python -m unittest pyrodigal.tests -vv
 
   test_windows:
     name: Test (Windows)
@@ -186,16 +182,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
-    - name: Update pip
-      run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Install test requirements
-      run: python -m pip install -r pyrodigal/tests/requirements.txt
-    - name: Build C extension
-      run: python setup.py build_ext --inplace
+      run: python -m pip install -r src/pyrodigal/tests/requirements.txt
+    - name: Build C extension in debug mode
+      run: python -m pip install -e . --no-build-isolation -v
     - name: Test without coverage
-      run: python -m unittest discover -vv
+      run: python -m unittest pyrodigal.tests -vv
 
   coverage_linux:
     name: Coverage (Linux)
@@ -219,20 +213,16 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Update pip
-      run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Install test requirements
-      run: python -m pip install -r pyrodigal/tests/requirements.txt
+      run: python -m pip install -r src/pyrodigal/tests/requirements.txt
     - name: Install coverage package
       run: python -m pip install -U coverage
-    - name: Build Prodigal with optimizations
-      run: python setup.py build_clib
     - name: Build Cython extension in debug mode
-      run: python setup.py build_ext --inplace --debug
+      run: python -m pip install -e . --no-build-isolation -v
     - name: Test with coverage
-      run: python -m coverage run -m unittest discover -vv
+      run: python -m coverage run -m unittest pyrodigal.tests -vv
     - name: Report coverage
       run: python -m coverage report
     - name: Upload to Codecov
