--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -174,8 +174,8 @@ jobs:
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Install test requirements
       run: python -m pip install -r src/pyrodigal/tests/requirements.txt
-    - name: Build C extension in debug mode
-      run: python -m pip install -e . --no-build-isolation -v
+    - name: Build C extension in release mode
+      run: python -m pip install -e . --no-build-isolation -v -C cmake.build-type=Release
     - name: Test without coverage
       run: python -m unittest pyrodigal.tests -vv
 
