Add `cibuildwheel` configuration to `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,14 @@ cmake.define.CMAKE_LINKER_TYPE = "mold"
 #[tool.coverage.run]
 #plugins = ["Cython.Coverage"]
 
+[tool.cibuildwheel]
+before-build = "pip install scikit-build-core cython"
+build-frontend = { name = "pip", args = ["--no-build-isolation"] }
+build-verbosity = 1
+test-command = "python -m unittest pyrodigal.tests -v"
+test-requires = "importlib-resources"
+free-threaded-support = false
+
 [tool.coverage.report]
 include = ["src/pyrodigal/*"]
 omit = ["src/pyrodigal/tests/*"]
