--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -209,6 +209,8 @@ jobs:
       run: python -m pip install -U coverage
     - name: Build Cython extension in debug mode
       run: python -m pip install -e . --no-build-isolation -v
+    - name: Copy Cython files in-source
+      run: cp build/Debug/src/pyrodigal/lib.c src/pyrodigal/lib.c
     - name: Test with coverage
       run: python -m coverage run -m unittest pyrodigal.tests -vv
     - name: Report coverage
