--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -179,46 +179,46 @@ jobs:
     - name: Test without coverage
       run: python -m unittest pyrodigal.tests -vv
 
-  coverage_linux:
-    name: Coverage (Linux)
-    runs-on: ubuntu-latest
-    needs: test_linux
-    env:
-      OS: Linux
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - python-version: 3.12
-          python-release: v3.12
-          python-impl: CPython
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        submodules: true
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Python requirements
-      run: python -m pip install -r .github/workflows/requirements.txt
-    - name: Install test requirements
-      run: python -m pip install -r src/pyrodigal/tests/requirements.txt
-    - name: Install coverage package
-      run: python -m pip install -U coverage
-    - name: Build Cython extension in debug mode
-      run: python -m pip install -e . --no-build-isolation -v
-    - name: Copy Cython files in-source
-      run: cp build/Debug/src/pyrodigal/lib.c src/pyrodigal/lib.c
-    - name: Test with coverage
-      run: python -m coverage run -m unittest pyrodigal.tests -vv
-    - name: Report coverage
-      run: python -m coverage report
-    - name: Upload to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        flags: ${{ matrix.python-impl }},${{ matrix.python-release }},${{ env.OS }}
-        name: test-python-${{ matrix.python-version }}
-        fail_ci_if_error: true
-        token: ${{ secrets.CODECOV_TOKEN }}
+  # coverage_linux:
+  #   name: Coverage (Linux)
+  #   runs-on: ubuntu-latest
+  #   needs: test_linux
+  #   env:
+  #     OS: Linux
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       include:
+  #       - python-version: 3.12
+  #         python-release: v3.12
+  #         python-impl: CPython
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v4
+  #     with:
+  #       submodules: true
+  #   - name: Setup Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v5
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #   - name: Install Python requirements
+  #     run: python -m pip install -r .github/workflows/requirements.txt
+  #   - name: Install test requirements
+  #     run: python -m pip install -r src/pyrodigal/tests/requirements.txt
+  #   - name: Install coverage package
+  #     run: python -m pip install -U coverage
+  #   - name: Build Cython extension in debug mode
+  #     run: python -m pip install -e . --no-build-isolation -v
+  #   - name: Copy Cython files in-source
+  #     run: cp build/Debug/src/pyrodigal/lib.c src/pyrodigal/lib.c
+  #   - name: Test with coverage
+  #     run: python -m coverage run -m unittest pyrodigal.tests -vv
+  #   - name: Report coverage
+  #     run: python -m coverage report
+  #   - name: Upload to Codecov
+  #     uses: codecov/codecov-action@v1
+  #     with:
+  #       flags: ${{ matrix.python-impl }},${{ matrix.python-release }},${{ env.OS }}
+  #       name: test-python-${{ matrix.python-version }}
+  #       fail_ci_if_error: true
+  #       token: ${{ secrets.CODECOV_TOKEN }}
