--- a/pkg/aur/PKGBUILD.in
+++ b/pkg/aur/PKGBUILD.in
@@ -9,7 +9,7 @@ url="https://github.com/althonos/pyrodigal"
 arch=('i686' 'pentium4' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
 license=("GPL-3.0-only")
 depends=('python' 'python-archspec')
-makedepends=('python-setuptools' 'cython' 'python-build' 'python-installer')
+makedepends=('cython' 'python-build' 'python-installer' 'cmake' 'ninja' 'python-scikit-build-core')
 optdepends=('python-isal: fast gzip decompression support'
             'python-lz4: lz4 decompression support'
             'python-zstandard: zstd decompression support')
@@ -18,20 +18,26 @@ sha256sums=(%sha256sum)
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
-    python -m build --wheel --no-isolation
+    python -m build --wheel --no-isolation --skip-dependency-check
 }
 
 check() {
-    local pyver=$(python -c 'import sys; print(*sys.version_info[:2], sep="")')
-    local impl=$(python -c 'import platform; print(platform.python_implementation().lower())')
+    local abitag=$(python -c 'import sys; print(*sys.version_info[:2], sep="")')
     local machine=$(python -c 'import platform; print(platform.machine())')
-    cd "${srcdir}/${_name}-${pkgver}/build/lib.linux-${machine}-${impl}-${pyver}"
+    whl="${srcdir}/${_name}-${pkgver}/dist/${_name}-${pkgver}-cp${abitag}-cp${abitag}-linux_${machine}.whl"
+
+    python -m venv --symlinks --system-site-packages "${srcdir}/env"
+    source "${srcdir}/env/bin/activate"
+    python -m installer "$whl"
+
     python -m unittest ${_name}.tests
 }
 
 package() {
     local abitag=$(python -c 'import sys; print(*sys.version_info[:2], sep="")')
     local machine=$(python -c 'import platform; print(platform.machine())')
-    python -m installer --destdir="$pkgdir" "${srcdir}/${_name}-${pkgver}/dist/${_name}-${pkgver}-cp${abitag}-cp${abitag}-linux_${machine}.whl"
+    whl="${srcdir}/${_name}-${pkgver}/dist/${_name}-${pkgver}-cp${abitag}-cp${abitag}-linux_${machine}.whl"
+
+    python -m installer --prefix="${pkgdir}/usr" "$whl"
     install -Dm644  ${srcdir}/${_name}-${pkgver}/COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
