--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -9,7 +9,7 @@ jobs:
 
   wheel-linux-aarch64:
     name: Build Linux wheels (Aarch64)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
       with:
@@ -34,7 +34,7 @@ jobs:
 
   wheel-linux-x86_64:
     name: Build Linux wheels (x86-64)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
       with:
@@ -126,7 +126,7 @@ jobs:
     - name: Install build requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build source distribution
-      run: python setup.py sdist
+      run: python -m build -s .
     - name: Store built source distribution
       uses: actions/upload-artifact@v4
       with:
@@ -149,7 +149,7 @@ jobs:
           name: sdist
           path: dist/
     - name: Update pip to latest version
-      run: python -m pip install -U pip setuptools wheel
+      run: python -m pip install -U pip
     - name: Install built wheel
       run: python -m pip install --no-binary pyrodigal --find-links=dist pyrodigal
     - name: Run tests without coverage
@@ -188,7 +188,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions: 
       contents: write
-    if: "!contains(github.ref, 'rc')"
+    if: "!contains(github.ref, 'rc') && !contains(github.ref, 'alpha')"
     name: Release
     needs: upload
     steps:
