--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -99,12 +99,17 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
+    - name: Configure build for amd64
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: amd64
     - name: Build manylinux wheels
       uses: pypa/cibuildwheel@v2.21.3
       env:
         CIBW_ARCHS: AMD64
         CIBW_BUILD: '*-win_amd64'
         CIBW_BUILD_VERBOSITY: 2
+        CMAKE_GENERATOR: Ninja
       with:
         output-dir: dist
     - uses: actions/upload-artifact@v4
