--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -170,12 +170,18 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
+    - name: Configure build for amd64
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: amd64
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Install test requirements
       run: python -m pip install -r src/pyrodigal/tests/requirements.txt
     - name: Build C extension in release mode
       run: python -m pip install -e . --no-build-isolation -v -C cmake.build-type=Release
+      env:
+        CMAKE_GENERATOR: Ninja
     - name: Test without coverage
       run: python -m unittest pyrodigal.tests -vv
 
