Avoid pushing post-releases to AUR in `package.yml` Actions workflow

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -199,7 +199,7 @@ jobs:
   aur:
     environment: Arch Linux User Repository
     runs-on: ubuntu-latest
-    if: "!contains(github.ref, 'rc') && !contains(github.ref, 'alpha')"
+    if: "!contains(github.ref, 'rc') && !contains(github.ref, 'alpha') && !contains(github.ref, 'post')"
     name: Update AUR package
     needs:
     - sdist
