--- a/src/pyrodigal/impl/CMakeLists.txt
+++ b/src/pyrodigal/impl/CMakeLists.txt
@@ -1,4 +1,5 @@
 cython_extension(generic LINKS prodigal EXTRA_SOURCES generic.c generic.h template.h)
+cython_extension(swar64 LINKS prodigal EXTRA_SOURCES swar64.c swar64.h template.h)
 
 if(HAVE_SSE2)
   cython_extension(sse2 LINKS prodigal EXTRA_SOURCES sse2.c sse2.h template.h)
