Setup compilation to WebAssembly with Pyodide

--- a/src/pyrodigal/impl/CMakeLists.txt
+++ b/src/pyrodigal/impl/CMakeLists.txt
@@ -9,7 +9,7 @@ if(HAVE_SSE2)
   endforeach()
 endif()
 
-if(HAVE_AVX2)
+if(HAVE_AVX2 AND (NOT CMAKE_C_COMPILER_TARGET STREQUAL "wasm32"))
   cython_extension(avx2 LINKS prodigal EXTRA_SOURCES avx2.c avx2.h template.h)
   string(REPLACE " " ";" IMPL_FLAGS ${AVX2_C_FLAGS})
   foreach(_flag IN LISTS IMPL_FLAGS) 
@@ -17,7 +17,7 @@ if(HAVE_AVX2)
   endforeach()
 endif()
 
-if(HAVE_AVX512)
+if(HAVE_AVX512 AND (NOT CMAKE_C_COMPILER_TARGET STREQUAL "wasm32"))
   cython_extension(avx512 LINKS prodigal EXTRA_SOURCES avx512.c avx512.h template.h)
   string(REPLACE " " ";" IMPL_FLAGS ${AVX512_C_FLAGS})
   foreach(_flag IN LISTS IMPL_FLAGS) 
@@ -25,7 +25,7 @@ if(HAVE_AVX512)
   endforeach()
 endif()
 
-if(HAVE_NEON)
+if(HAVE_NEON AND (NOT CMAKE_C_COMPILER_TARGET STREQUAL "wasm32"))
   cython_extension(neon LINKS prodigal EXTRA_SOURCES neon.c neon.h template.h)
   string(REPLACE " " ";" IMPL_FLAGS ${NEON_C_FLAGS})
   foreach(_flag IN LISTS IMPL_FLAGS) 
