--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,18 +69,21 @@ sdist.exclude = [".github", "benches/data/*.fna"]
 if.state = "editable"
 cmake.build-type = "Debug"
 
-[[tool.scikit-build-overrides]]
+[[tool.scikit-build.overrides]]
 if.env.SCCACHE = true
 cmake.define.CMAKE_C_COMPILER_LAUNCHER = "sccache"
 cmake.define.CMAKE_CXX_COMPILER_LAUNCHER = "sccache"
 
-[[tool.scikit-build-overrides]]
+[[tool.scikit-build.overrides]]
 if.env.MOLD = true
 cmake.define.CMAKE_LINKER_TYPE = "mold"
 
+[[tool.scikit-build.overrides]]
+if.env.PYODIDE = "1"
+cmake.define.CMAKE_C_COMPILER_TARGET = "wasm32"
+cmake.define.CMAKE_SYSTEM_PROCESSOR = "wasm32"
+
 [tool.cibuildwheel]
-before-build = "pip install scikit-build-core cython"
-build-frontend = { name = "pip", args = ["--no-build-isolation"] }
 build-verbosity = 1
 test-command = "python -m unittest pyrodigal.tests -v"
 test-extras = ["test"]
