--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -49,7 +49,7 @@ jobs:
 
   wheel-macos-x86_64:
     name: Build MacOS wheels (x86-64)
-    runs-on: macOS-13
+    runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v4
       with:
@@ -69,7 +69,7 @@ jobs:
 
   wheel-macos-aarch64:
     name: Build MacOS wheels (Aarch64)
-    runs-on: macOS-13
+    runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v4
       with:
@@ -89,7 +89,7 @@ jobs:
 
   wheel-win32-x86_64:
     name: Build Windows wheels (x86-64)
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
       with:
@@ -208,10 +208,10 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
-    - name: Set up Python 3.12
+    - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
-        python-version: 3.12
+        python-version: 3.13
     - name: Download source distribution
       uses: actions/download-artifact@v4
       with:
