--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "pyrodigal"
-version = "3.6.3-post1"
+version = "3.7.0"
 description = "Cython bindings and Python interface to Prodigal, an ORF finder for genomes and metagenomes."
 readme = "README.md"
 requires-python = ">=3.7"
-license = { file = "COPYING" }
+license = "GPL-3.0-or-later"
+license-files = ["COPYING"]
 authors = [
   { name = "Martin Larralde", email = "martin.larralde@embl.de" },
 ]
@@ -17,7 +18,6 @@ classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
     "Programming Language :: C",
     "Programming Language :: Cython",
